src/test/ui/mismatched_types/issue-26480-1.stderr
error[E0308]: mismatched types
  --> $DIR/issue-26480-1.rs:27:19
   |
27 |                   $arr.len() * size_of($arr[0])); //~ ERROR mismatched types
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected u64, found usize
...
34 |     write!(hello);
   |     -------------- in this macro invocation

error: aborting due to previous error

